# saltunnel

./: .gitignore  Makefile.am  README.md  configure.ac  saltunnel-test.c  saltunnel.c
docs/: saltunnel.1  saltunnel.1.html
saltunnel/: .gitignore  Makefile.am  README.md  cache.c  cache.test.c  chaos.c  chaos.h  config.h  configure.ac  crypto_secretbox_chacha20poly1305.h  crypto_secretbox_salsa2012poly1305.c  crypto_secretbox_salsa20poly1305.c  crypto_secretbox_salsa20poly1305.h  cryptostream.h  cryptostream_decrypt.c  cryptostream_decrypt_feed.c  cryptostream_decrypt_parallel.c  cryptostream_encrypt.c  cryptostream_encrypt_feed.c  cryptostream_encrypt_parallel.c  devurandom.h  do  get_mac_address.c  get_mac_address.h  hashtable.c  hashtable.h  hashtable.test.c  hashtable.test.h  hypercounter.c  hypercounter.h  log.c  log.h  main.c  nonce.c  nonce.h  nonce.test.c  nonce.test.h  oops.c  oops.h  prehashtable.c  (+66 more)
saltunnel-client/: main.c  saltunnel_client_main.c
saltunnel-server/: saltunnel_server_main.c
saltunnel.xcodeproj/: project.pbxproj
saltunnel/c/: cache.h  crypto_secretbox_chacha20poly1305.c  cryptostream_decrypt.c  cryptostream_decrypt_feed.c  cryptostream_decrypt_parallel.c  cryptostream_encrypt_feed.c  cryptostream_encrypt_parallel.c  nonce.h  oops.c  rwn.c  saltunnel.c  saltunnel_kx.c  saltunnel_mx.h  stopwatch.h  tcpclient.h  tcpserver.c  tcpserver.h  threadpool_barrier.c  uint16.h
saltunnel/doc/: saltunnel-client.1  saltunnel-server.1
saltunnel/src/: cache.c  config.c  config.h  crypto_secretbox_salsa208poly1305.h  crypto_secretbox_salsa20poly1305.c  crypto_secretbox_salsa20poly1305.h  cryptostream.h  cryptostream_decrypt.c  cryptostream_decrypt_feed.c  cryptostream_decrypt_parallel.c  cryptostream_encrypt.c  cryptostream_encrypt_feed.c  cryptostream_encrypt_parallel.c  cryptostream_vector.c  hypercounter.c  hypercounter.h  log.c  log.h  nonce.c  nonce.h  oops.c  oops.h  rwn.c  rwn.h  saltunnel.c  saltunnel.h  saltunnel_kx.c  saltunnel_kx.h  saltunnel_mx.h  saltunnel_mx_parallel.c  saltunnel_mx_serial.c  saltunnel_tcp_client_forwarder.c  saltunnel_tcp_client_forwarder.h  saltunnel_tcp_server_forwarder.c  saltunnel_tcp_server_forwarder.h  stopwatch.c  stopwatch.h  tcpclient.c  tcpclient.h  tcpserver.c  (+9 more)
saltunnel/test/: cache.test.c  cache.test.h  chaos.c  chaos.h  cryptostream_vector.test.c  hypercounter.test.c  log.test.c  nonce.test.c  nonce.test.h  rwn.test.c  rwn.test.h  saltunnel.test.c  saltunnel.test.h  saltunnel_tcp_forwarder.test.c  saltunnel_tcp_forwarder.test.h  saltunnel_test_main.c  tcp.test.c  test.c  test.h
saltunnel2/: chaos.c  chaos.h  crypto_secretbox_salsa2012poly1305.h  crypto_secretbox_salsa208poly1305.c  cryptostream.c  cryptostream.h  cryptostream_decrypt.c  cryptostream_decrypt_feed.c  cryptostream_encrypt.c  cryptostream_encrypt_feed.c  cryptostream_vector.c  cryptostream_worker.c  cryptostream_worker.h  devurandom.c  devurandom.h  log.c  log.h  main.c  math.h  nonce.c  nonce.h  oops.c  oops.h  pthread_barrier.c  pthread_barrier.h  saltunnel.c  saltunnel.h  saltunnel2  stopwatch.c  stopwatch.h  test.c  threadpool.c  threadpool.h  uint16.c  uint16.h  uninterruptable.c  uninterruptable.h
saltunnel2.xcodeproj/: project.pbxproj
src/: cache.h  concurrentlist.c  concurrentlist.h  config.h  consttime.c  consttime.h  cryptostream.h  cryptostream_decrypt.c  cryptostream_decrypt_feed.c  cryptostream_decrypt_parallel.c  cryptostream_encrypt.c  cryptostream_encrypt_feed.c  cryptostream_encrypt_parallel.c  cryptostream_vector.c  csprng.c  csprng.h  hex2bin.c  hex2bin.h  hypercounter.c  hypercounter.h  iopoll.c  iopoll.h  keyfile.c  keyfile.h  log.h  math.h  nonce.h  oops.c  rwn.c  rwn.h  saltunnel.h  saltunnel_crypto.c  saltunnel_crypto.h  saltunnel_init.c  saltunnel_init.h  saltunnel_kx.c  saltunnel_kx.h  saltunnel_mx.c  saltunnel_mx.h  saltunnel_mx_parallel.c  (+23 more)
tests/: cache.test.c  concurrentlist.test.c  concurrentlist.test.h  consttime.test.c  consttime.test.h  cryptostream_vector.test.c  cryptostream_vector.test.h  csprng.test.c  csprng.test.h  hex2bin.test.c  hex2bin.test.h  hypercounter.test.c  hypercounter.test.h  log.test.c  log.test.h  nonce.test.c  rwn.test.c  saltunnel.test.c  saltunnel.test.h  saltunnel_tcp_forwarder.test.c  (+7 more)
(+14 files in other folders)
